update toml file

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,10 +1,10 @@
 # Everything in this section will be available as an environment variable
 db_username = "Zahiruddin"
 db_password = "zz780113"
+deta_key_1 = "c0jo61nr_Fk3geHfjZYDv53FuxFYaEPjhitTawRVz"
+deta_key_2 = "c0jo61nr_P1wSYy8XFqjnwgyeWUXqU635PWYK4A85"
 
-# You can also add other sections if you like.
-# The contents of sections as shown below will not become environment variables,
-# but they'll be easily accessible from within Streamlit anyway as we show
-# later in this doc.
 [my_cool_secrets]
-things_i_like = ["Streamlit", "Python"]
+Key Name: b993nq, 
+Key Description: Project Key: b993nq, 
+Project Key: c0jo61nr_Fk3geHfjZYDv53FuxFYaEPjhitTawRVz
